--- a/components/contentBody/contentBody.css
+++ b/components/contentBody/contentBody.css
@@ -1,9 +1,9 @@
 .wrapper {
-  @include container-with-bleed;
   display: flex;
   flex-flow: column nowrap;
   font-family: $serif;
   margin: 0 auto;
+  width: 100%;
 
   > * {
     margin: 0 auto;
