--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -1,24 +1,33 @@
-@import 'mixins/index';
-
 .wrapper {
   flex: 0 0 auto;
-  margin-right: lost-vars('gutter');
+  width: 100%;
+  /* margin-right: lost-vars('gutter'); */
+  /* tidy-span: 12; */
 
   @media ($smMin) {
+    padding-left: 0;
+    padding-right: 0;
     min-width: rem(330);
   }
 
-  &:last-child {
-    margin-right: 0;
-  }
+  /* > * {
+    margin: 0 auto;
+    tidy-span: 10;
 
-  .sidebarItem {
-    /* stylelint-disable selector-max-specificity */
-    &:not(:empty) {
-      margin-bottom: rem(40);
+    @media ($mdMin) {
+      tidy-offset-left: 0;
+      tidy-span: 6;
     }
-    /* stylelint-enable */
-  }
+
+    @media ($lgMin) {
+      tidy-offset-left: 0;
+      tidy-span: 6;
+    }
+  } */
+
+  /* &:last-child {
+    margin-right: 0;
+  } */
 
   :global(.sidebarHTMLContent) {
     @include basic-formatting;
@@ -26,5 +35,14 @@
     @include block-paragraph;
     @include body-link;
     @include block-list;
+  }
+}
+
+.item {
+  width: 100%;
+
+  /* stylelint-disable-next-line selector-max-specificity */
+  &:not(:empty) {
+    margin-bottom: rem(40);
   }
 }
